# LaserResist

./: .gitignore  BLOOM_INTEGRATION_GUIDE.md  M73_RESEARCH.md  README.md  add_bloom_visualization.py  analyze_intersections.py  analyze_precise_point.py  analyze_specific_junctions.py  apply_bloom_integration.py  compare_bloom_strengths.py  config_example.json  config_example.yaml  debug_bloom_details.py  debug_junction_criteria.py  debug_junction_paths.py  debug_pad_fills.py  final_bloom_visualization.py  interactive_junction_viewer.py  precise_junction.txt  profile_performance.py  pyproject.toml  test_blooming_fast.py  test_blooming_simulation.py  test_fill.py  test_fill_offset.py  test_gcode.py  test_initial_offset.py  test_intersection_issue.py  test_isolated_features.py  test_parser.py  test_pin_mode.py  trace_based_bloom_detection.py  verify_junction_coverage.py  visualize_junction_fix.py  zoomed_junction_clicker.py
.claude/: settings.local.json
examples/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  test.gtl
src/laserresist/: __init__.py  __main__.py  bloom_compensator.py  cli.py  drilling_template.scad  fill_generator.py  gcode_generator.py  gerber_parser.py  pin_alignment.py  template_generator.py  visualizer.py
tests/: __init__.py
